# TEMPLATE_RPA_PROYECT

./: .gitignore  README.md  cookiecutter.json  pyproject.toml
Scripts/: bot.bat  venv.bat
config/: config.ini.example  config_log.json
src/: __init__.py  paths.py
src/functions/decorators/: register_log.py  retry.py
src/logger/: __init__.py  file_logger.py  json_logger.py
src/logger/core/: logger.py
src/logger/formats/: jsonlogger.py
src/{{ cookiecutter.project_slug }}/: __init__.py  config.py
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  example.env  pyproject.toml
{{cookiecutter.project_slug}}/config/: config.ini.example
{{cookiecutter.project_slug}}/scripts/: run.bat
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: __main__.py  logger.py  paths.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/decorators/: retry.py
