[build-system]
requires = ["setuptools>=62.6",]
build-backend = "setuptools.build_meta"

[project]
name = "your_project_name"
version = "0.1.0"
description = "your_project_description"
requires-python = ">=3.12"
authors = [{name="your_name"}]
readme = "README.md"
keywords = []
dependencies = [

]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.*"]