[build-system]
requires = ["setuptools>=62.6",]
build-backend = "setuptools.build_meta"

[project]
name = "your_project_name"
version = "1.0.0"
description = "your_project_description"
requires-python = ">=3.12"
authors = [{name="your_name"}]
readme = "README.md"
keywords = []
dependencies = [

]

[project.optional-dependencies]
test = ["colorama==0.4.6","iniconfig==2.1.0","pluggy==1.5.0","pytest==8.3.5","packaging==24.2"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.*"]