[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author }}"]
dependencies = []

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm.dev-dependencies]
dev = [
    "{{ cookiecutter.project_slug }} @ file://.",
    "loguru>=0.7.3",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0"
]