[project]
name = "{{cookiecutter.package_name}}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
authors = [{"name"= "{{cookiecutter.author}}"}]

dependencies = [
    "loguru>=0.7.3",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0"
]

requires-python = "=={{cookiecutter.python_version}}.*"
readme = "README.md"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.mypy]
ignore_missing_imports = true

[tool.pdm]
distribution = true
