[project]
name = "{{cookiecutter.package_name}}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
authors = [{"name"= "{{cookiecutter.author}}"}]

dependencies = [
    "loguru>=0.7.3",
    "python-dotenv>=1.1.0"
]

requires-python = "=={{cookiecutter.python_version}}.*"
readme = "README.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "import-linter>=2.4",
    "pre-commit>=4.3.0"
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.mypy]
ignore_missing_imports = true

[tool.pdm]
distribution = true

[project.scripts]
run-bot = "{{cookiecutter.package_name}}.__main__:main"